src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__dashboard__home_screen_baseline.snap
---
source: src/tui/snapshot_tests/dashboard.rs
expression: terminal.backend()
---
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"  owner/repo   main   @carlos  │  Loading...                                                                         "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"╔══════════════════════════════════════════════[ What's New in v0.22.0 ]═══════════════════════════════════════════════╗"
"║  [Added] feat(doctor): provider-aware validate_provider_setup with AzDO checks (#461)                                ║"
"║  [Added] feat(provider): extend RepoProvider trait with CI and Merge surfaces (#460)                                 ║"
"║  [Added] refactor(provider): wire create_provider() at all call sites; remove hardcoded GhCliClient::new() (#459)    ║"
"║  [Added] refactor(provider): rename GitHubClient trait to RepoProvider; neutralize shared types (#458)               ║"
"╚══════════════════════════════════════════ Press [n] for full release notes ══════════════════════════════════════════╝"
"╔════════[ Quick Actions ]═════════╗╔════════════[ Suggestions ]═════════════╗╔══════════[ Recent Activity ]═══════════╗"
"║  [i]  Browse Issues              ║║  No suggestions — everything looks good║║  No recent sessions                    ║"
"║  [m]  Browse Milestones          ║║                                        ║║                                        ║"
"║  [M]  Review Milestone           ║║                                        ║║                                        ║"
"║  [r]  Run Prompt                 ║║                                        ║║                                        ║"
"║  [a]  Adapt Project              ║║                                        ║║                                        ║"
"║  [p]  Review PRs                 ║║                                        ║║                                        ║"
"║  [s]  Status                     ║║                                        ║║                                        ║"
"║  [c]  Cost Report                ║║                                        ║║                                        ║"
"║  [t]  Token Report               ║║                                        ║║                                        ║"
"║  [Q]  TurboQuant Savings         ║║                                        ║║                                        ║"
"║  [S]  Settings                   ║║                                        ║║                                        ║"
"║  [u]  Update Maestro             ║║                                        ║║                                        ║"
"║  [q]  Quit                       ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"╚══════════════════════════════════╝╚════════════════════════════════════════╝╚════════════════════════════════════════╝"
