src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__dashboard__home_screen_selected_action.snap
---
source: src/tui/snapshot_tests/dashboard.rs
assertion_line: 78
expression: terminal.backend()
---
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"  owner/repo   main   @carlos  │  Loading...                                                                         "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"╔══════════════════════════════════════════════[ What's New in v0.23.0 ]═══════════════════════════════════════════════╗"
"║  [Added] chore(workflow): mechanize /pushup commit + PR scaffolding (#556)                                           ║"
"║  [Added] chore(workflow): DOR linter + condensed issue summary in pre-check hook (#555)                              ║"
"║  [Added] chore(workflow): scripted milestone dependency-graph update for /pushup (#554)                              ║"
"║  [Added] feat(azdo): implement CI status and merge operations via az pipelines and az repos pr (#466)                ║"
"╚══════════════════════════════════════════ Press [n] for full release notes ══════════════════════════════════════════╝"
"╔════════[ Quick Actions ]═════════╗╔════════════[ Suggestions ]═════════════╗╔══════════[ Recent Activity ]═══════════╗"
"║  [i]  Browse Issues              ║║  No suggestions — everything looks good║║                                        ║"
"║  [m]  Browse Milestones          ║║                                        ║║                                        ║"
"║  [M]  Review Milestone           ║║                                        ║║                                        ║"
"║  [r]  Run Prompt                 ║║                                        ║║                                        ║"
"║  [a]  Adapt Project              ║║                                        ║║                                        ║"
"║  [p]  Review PRs                 ║║                                        ║║                                        ║"
"║  [s]  Status                     ║║                                        ║║                                        ║"
"║  [c]  Cost Report                ║║                                        ║║                                        ║"
"║  [t]  Token Report               ║║                                        ║║                                        ║"
"║  [Q]  TurboQuant Savings         ║║                                        ║║                                        ║"
"║  [S]  Settings                   ║║                                        ║║                                        ║"
"║  [u]  Update Maestro             ║║                                        ║║                                        ║"
"║  [q]  Quit                       ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║           No recent sessions.          ║"
"║                                  ║║                                        ║║        Press [r] to launch one.        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"╚══════════════════════════════════╝╚════════════════════════════════════════╝╚════════════════════════════════════════╝"
