src/tui/snapshot_tests/snapshots/maestro__tui__snapshot_tests__dashboard__home_screen_with_suggestions.snap
---
source: src/tui/snapshot_tests/dashboard.rs
expression: terminal.backend()
---
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"  owner/repo   main   @carlos  │  Loading...                                                                         "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"╔══════════════════════════════════════════════[ What's New in v0.20.0 ]═══════════════════════════════════════════════╗"
"║  [Added] fix: gate Azure DevOps provider behind experimental.azure_devops flag (#404)                                ║"
"║  [Added] feat: wire modes resolver into session spawn path (#402)                                                    ║"
"║  [Added] tech-debt: resolve TurboQuant CompressedContext.vectors dead code (#403)                                    ║"
"╚══════════════════════════════════════════ Press [n] for full release notes ══════════════════════════════════════════╝"
"╔════════[ Quick Actions ]═════════╗╔════════════[ Suggestions ]═════════════╗╔══════════[ Recent Activity ]═══════════╗"
"║  [i]  Browse Issues              ║║  󰝦 3 issues labeled maestro:ready — pre║║  No recent sessions                    ║"
"║  [m]  Browse Milestones          ║║   No sessions running — press [r] to s║║                                        ║"
"║  [M]  Review Milestone           ║║                                        ║║                                        ║"
"║  [r]  Run Prompt                 ║║                                        ║║                                        ║"
"║  [a]  Adapt Project              ║║                                        ║║                                        ║"
"║  [p]  Review PRs                 ║║                                        ║║                                        ║"
"║  [s]  Status                     ║║                                        ║║                                        ║"
"║  [c]  Cost Report                ║║                                        ║║                                        ║"
"║  [t]  Token Report               ║║                                        ║║                                        ║"
"║  [Q]  TurboQuant Savings         ║║                                        ║║                                        ║"
"║  [S]  Settings                   ║║                                        ║║                                        ║"
"║  [u]  Update Maestro             ║║                                        ║║                                        ║"
"║  [q]  Quit                       ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"║                                  ║║                                        ║║                                        ║"
"╚══════════════════════════════════╝╚════════════════════════════════════════╝╚════════════════════════════════════════╝"
